--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     
 
-    <section id="gamesView">
+    <section id="gamesListView">
   
       <header class="banner">
         <img src="./images/wraper.png" alt="games banner" class="w-100">
@@ -68,7 +68,7 @@
 
     </section>
 
-    <section id="gamesDetailsView" class="d-none">
+    <section id="gameDetailsView" class="d-none">
       <div class="container">
        <div class="custom-modal mt-5">
           <header class="mb-5 d-flex justify-content-between align-items-center flex-wrap">
